Fixing parsing for the response of findProjectById to use the ProjectContainer entity instead of the Project direcly.

--- a/src/main/resources/softwaredelivery/release-config.yml
+++ b/src/main/resources/softwaredelivery/release-config.yml
@@ -1,7 +1,7 @@
 # Detalhes da versão a ser liberada
 ---
-title: v1.0.12
-apiKey: OWX4M-XIH13-0X333-QB0QO
+title: v1.2
+apiKey: SWCGE-FEV8C-1CC9X-7OC0O
 releaseNotesFile: release-notes.md
 buildDirectory: target
 artifacts:
